--- a/05-express-server/package.json
+++ b/05-express-server/package.json
@@ -5,7 +5,17 @@
   "main": "src/index.js",
   "author": "Alex Britto",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx nodemon src/index.js"
+  },
   "dependencies": {
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@eslint/json": "^1.0.0",
+    "eslint": "^9.39.2",
+    "globals": "^17.3.0",
+    "nodemon": "^3.1.11"
   }
 }
