--- a/05-express-server/package.json
+++ b/05-express-server/package.json
@@ -9,7 +9,8 @@
     "dev": "npx nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
