--- a/05-express-server/package.json
+++ b/05-express-server/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express": "^5.2.1",
-    "uuidv4": "^6.2.13"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
